started working on the search screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BeatInspector</string>
+    <string name="searchBar_placeholder">Search songs...</string>
 </resources>
