correct status bar color in search screen + no data placeholder text for genres

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">BeatInspector</string>
     <string name="searchBar_placeholder">Search songs...</string>
+    <string name="no_data">no data</string>
 </resources>
