enabled okhttp cache & added redirect to Manage Apps upon logout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -240,5 +240,6 @@
     <string name="github">GitHub Repository</string>
     <string name="github_link" translatable="false">https://github.com/Leonidius20/BeatInspector</string>
     <string name="settings_block_about">About the app</string>
+    <string name="log_out_explanation">Upon pressing the Log out button, your data will be wiped from the app. Then, a Spotify \"Manage Apps\" page will be opened in a browser window.\n\nIf you want to disconnect the app from your account, find BeatInspector in the list and press the \"Remove Access\" button next to it.</string>
 
 </resources>
