--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -244,5 +244,6 @@
     <string name="login_in_progress_tip">Please follow the instructions in the browser window…</string>
     <string name="log_in_error">There was an error during the login process. Please try again.</string>
     <string name="login_scopes_tip">We request access to your username and profile picture, so that you can see which account was used to log into the app.</string>
+    <string name="login_screen_try_again_button">Try again</string>
 
 </resources>
