--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -248,5 +248,7 @@
     <string name="login_scopes_tip">We request access to your username and profile picture, so that you can see which account was used to log into the app.\n\nWe request access to your playlists, liked (saved) tracks, top tracks and recently played tracks, so that you can view the information about them.</string>
     <string name="login_screen_try_again_button">Try again</string>
     <string name="version">Version %1$s</string>
+    <string name="preferences_settings_file_name" translatable="false">settings</string>
+    <string name="settings_block_content">Content</string>
 
 </resources>
