--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -252,4 +252,8 @@
     <string name="settings_block_content">Content</string>
     <string name="login_i_am_a_minor">I am less than 19 years old</string>
 
+    <string name="preferences_tokens_file_name" translatable="false">ua.leonidius.beatinspector.TOKENS</string>
+    <string name="preferences_access_token">access_token</string>
+    <string name="preferences_refresh_token">refresh_token</string>
+
 </resources>
